tests/src/frontend/typechecking/invalid/late_static_const1.sk
base class Foo {
  const x: String;
}

fun main(): void {
  print_raw(Foo::x)
}
